--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "axios": "^1.4.0",
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "mongoose": "^6.4.5",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.5",
     "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lottie": "^1.2.3",
     "react-qr-reader": "^3.0.0-beta-1",
     "tailwindcss": "3.3.2"
   }
